feat: sync with upstream Aiven-Open opensearch-connector
Syncs with upstream Aiven-Open/opensearch-connector-for-apache-kafka,
bringing in the full rewrite from custom BulkProcessor to the native
OpenSearch Java client BulkIngester architecture.

Key upstream changes included:
- Replace custom BulkProcessor and OpensearchClient with native
  opensearch-java BulkIngester (exponential backoff, built-in retries)
- Bump opensearch-java client to 3.6.0 (OpenSearch 3.x support)
- Add TLS/HTTPS configuration with custom keystore/truststore support
- Add connection.trust.all.certificates SSL property
- Refactor enum definitions out of subclasses
- Rename Opensearch -> OpenSearch throughout (class names, packages)
- Migrate to Gradle 9.3.1 and JUnit 5.x
- Implement KIP-898 via Service loader for SinkConnector
- Add ErrantRecordReporter support
- Various dependency bumps (mockito, spotless, commons-lang3, testcontainers)